@@ -32,6 +32,7 @@ Version 1.1.7 to be released
 - Enh #1786: Enhanced CUrlValidator by adding 'validSchemes' and 'defaultScheme' property (Y!!)
 - Enh #1792: Enhanced CGridView: on ajax error a proper message is composed and displayed or optionally sent to the custom error handler (mdomba)
 - Enh #1843: Added 'uncheckValue' option to CHtml::activeRadioButtonList and CHtml::activeCheckBoxList. It allows to avoid hidden field rendering (creocoder, Sam Dark)
+- Enh #1996: Added support for using parameter binding with class-based actions (Qiang)
 - Enh #1999: Added CCaptchaAction::offset property in order to decrease or increase the readability of the captcha (Y!!)
 - Enh #2011: Added CDbCommand::setFetchMode to allow setting PDO result fetching mode (Sam Dark)
 - Enh #2013: When creating model with Gii, database field names will be checked to conform with PHP variable naming rules (mdomba)
@@ -53,7 +54,6 @@ Version 1.1.7 to be released
 - Enh #2185: Allow the column type to be optional when specifying columns for CGridView (Qiang)
 - Enh: Added CGridView::ajaxUpdateError for the possibility to use a custom ajax error handler (mdomba)
 - Enh: Allowed using CController instead of Controller with webapp generated application (Sam Dark)
-- Enh: Added CController::createInlineAction, CInlineAction::inputParams and errorMessage to allow easier override (Qiang)
 - Enh: Added ability to perform Relational query without getting related models (creocoder, Sam Dark)
 - Enh: Error page now displays associative array keys in parameter list (Sam Dark)
 - Chg #2001: CGridView now renders footer after the body content (Qiang)
